# deepcloud-pidlrad

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
scripts/: argsconfig.py  train.py
src/pidlrad/nn/: lstm.py  (+5 more)
weights/: rfe2_016_vit_2.pt  rfe2_016_vit_2_smoothed_exponential_sigma.pt  rfe2_123_new_lstm_large_mse.pt  rfe2_123_new_lstm_large_mse_exponential_decay.pt  rfe2_123_new_lstm_large_mse_smoothed_exponential_sigma.pt  rfe2_123_new_lstm_large_mse_smoothed_exponential_sigma_exponential_decays.pt  rfe2_129_new_lstm_large_eclv2.pt  rfe2_129_new_lstm_large_eclv2_exponential_decay.pt  rfe2_129_new_lstm_large_eclv2_smoothed_exponential_sigma.pt  rfe2_129_new_lstm_large_eclv2_smoothed_exponential_sigma_exponential_decays.pt  rfe2_209_fast_mlp_eclv2.pt  rfe2_209_fast_mlp_eclv2_exponential_decay.pt  rfe2_209_fast_mlp_eclv2_smoothed_exponential_sigma.pt  rfe2_209_fast_mlp_eclv2_smoothed_exponential_sigma_exponential_decays.pt  rfe2_215_unet2_eclv2.pt  rfe2_215_unet2_eclv2_exponential_decay.pt  rfe2_215_unet2_eclv2_smoothed_exponential_sigma.pt  rfe2_215_unet2_eclv2_smoothed_exponential_sigma_exponential_decays.pt  rfe2_233_new_lstm_eclv2_tiny.pt  rfe2_233_new_lstm_eclv2_tiny_exponential_decay.pt  rfe2_233_new_lstm_eclv2_tiny_smoothed_exponential_sigma.pt  rfe2_233_new_lstm_eclv2_tiny_smoothed_exponential_sigma_exponential_decays.pt  rfe2_234_new_lstm_eclv2_medium.pt  rfe2_234_new_lstm_eclv2_medium_exponential_decay.pt  rfe2_234_new_lstm_eclv2_medium_smoothed_exponential_sigma.pt  rfe2_251_new_lstm_eclv2_nano_weight_share.pt  (+4 more)
(+5 files in other folders)
